TH-357 style updates to fix overflow issue

--- a/assets/styles/core/creative-preview.less
+++ b/assets/styles/core/creative-preview.less
@@ -7,9 +7,11 @@
 
     .preview-modal-header {
         .clearfix();
+        .font-size(1.3);
         margin-bottom: 0.8rem;
-        i {
+        i[class*="glyph"] {
             margin-right: 1rem;
+            margin-left: 0;
         }
         a {
             display: inline-block;
